--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/netflix/2089030b-b32c-491d-9dfd-6685fb3f620c'>Netflix - Senior Data Scientist, Growth Marketing</a></h5> 
+<p><span class="badge badge-light">California</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oqtlbfw9&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nDNzmMwC'>Benefitfocus Careers - Sr. Director, Data Science</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
@@ -83,7 +87,7 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://blackhorsesolutions.applytojob.com/apply/opfWZd4aX1/Data-Scientist'>Data Scientist - BlackHorse Solutions - Career Page</a></h5> 
+<h5><a href='http://blackhorsesolutions.applytojob.com/apply/opfWZd4aX1/Data-Scientist'>Data Scientist - BlackHorse Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -95,11 +99,16 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
+<h5><a href='https://boards.greenhouse.io/optoro/jobs/1921706?gh_jid=1921706'>Job Application for Data Science Intern - Summer 2020 at Optoro</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 16, 2019 ... Please attach a sample of your code. It can be any language or framework, just 
+something you're proud of. Or provide a link to some code for us to look at in the?...</p>
+<hr/>
 <h5><a href='https://www.prostaff.ch/de/jobs/19143'>JAVA Applikationsentwickler Fullstack (m/w) | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getsimpl.recruiterbox.com/jobs/fk0jqu6/'>
+<h5><a href='https://getsimpl.recruiterbox.com/jobs/fk0jqu6/'>
     Data Scientist - Fraud at Simpl
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -109,7 +118,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698269045-data-science-uk-summer-internship-2019'>Verisk Data Science UK Summer Internship 2019 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698269045-data-science-uk-summer-internship-2019'>Verisk Data Science UK Summer Internship 2019 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -117,7 +126,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=989&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=69c7f557-de71-4a89-bcc3-b2f9de190d1f'>Data Science Lead</a></h5> 
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=989&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=69c7f557-de71-4a89-bcc3-b2f9de190d1f'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -137,7 +146,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shopify/e6a7b8c7-8c33-4566-9abb-94fc1a4d30e0'>Shopify - Senior Data Scientist (Multiple Roles)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/e6a7b8c7-8c33-4566-9abb-94fc1a4d30e0'>Shopify - Senior Data Scientist (Multiple Roles)</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -224,7 +233,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
+<h5><a href='http://truefit.applytojob.com/apply/7NGmrfHYWK/Data-Scientist-Machine-Learning-Pipelines'>Data Scientist - Machine Learning Pipelines - True Fit - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -238,7 +247,7 @@ and?...</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/databricks/jobs/4475474002'>Job Application for Principal Data Scientist - Media & Entertainment at Databricks</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/databricks/jobs/4475474002'>Job Application for Principal Data Scientist - Media & Entertainment at Databricks</a></h5> 
 <p><span class="badge badge-light">New York City Los Angeles</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -268,11 +277,11 @@ to generate a unique referral link and receive credit for anyone who applies?...
 <p>Oct 13, 2019 ... Apply to Data Scientist (Financial Services) at Fractal Analytics in San Francisco, 
 CA.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1776021?gh_src=d1949a901'>Job Application for Data Scientist at Nubank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1776021?gh_src=d1949a901'>Job Application for Data Scientist at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/jdcom/jobs/4495588002'>Job Application for Data Scientist - Business Growth at JD.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/jdcom/jobs/4495588002'>Job Application for Data Scientist - Business Growth at JD.com</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -369,7 +378,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -421,7 +430,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Arlington, VA, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4492809002'>Job Application for Senior Data Scientist, Media at Tencent</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tencent/jobs/4492809002'>Job Application for Senior Data Scientist, Media at Tencent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -439,7 +448,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Berlin, Germany  Berlin San Francisco New York Singapore Tokyo Seoul Beijing</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/j71cm7f7twxzan856pdhm9ustw'>Senior Data Science Recruiter | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/j71cm7f7twxzan856pdhm9ustw'>Senior Data Science Recruiter | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY  New York City</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -451,7 +460,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/85242e77-6c46-404b-8573-1eb04f240808'>Gojek - Group Product Manager, Data Science Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/85242e77-6c46-404b-8573-1eb04f240808'>Gojek - Group Product Manager, Data Science Platform</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -494,14 +503,6 @@ Supervision Data Scientist Manager is responsible for coordinating efforts on th
 <h5><a href='https://boards.greenhouse.io/novetta/jobs/4479006002'>Job Application for Data Scientist SME at Novetta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/207980?bpin=1046&com=2&rin=1467367'>Job Profile - Data Scientist: Advanced Analytics</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-23</p>
-<hr/>
-<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/207982?bpin=1046&com=2&rin=1467367'>Job Profile - Data Scientist: Advanced Analytics</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-23</p>
 <hr/>
 
 
